2006-01-06 Shiyun Yie <hplip@hp.com>
	* Removed HPIJS/HPLIP references that are not applicable.

2006-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_5L.xml: Added margin definitions, so that
	  text print jobs get correctly printed by CUPS (Thanks to Martin
	  Mares, mj at ucw dot cz, for the patch).

	* configure.in, configure.ac: Renamed configure.in to
	  configure.ac, to make the package working with the current
	  versions of aclocal and autoconf.

2006-01-05  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-PagePro_1400W.xml, driver/min12xxw,
	  opt/min12xxw-Model.xml: Added the Minolta PagePro 1400W
	  (supported by the "min12xxw" driver).
	
2006-01-03  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-PSC_1400.xml: Corrected IEEE 1284
	  information (RH bug #176493).

2005-12-21  Tim Waugh <twaugh@redhat.com>

	* printer/Okidata-ML_320.xml: Added IEEE 1284 information (RH
	  bug #176271).

2005-12-20  Tim Waugh <twaugh@redhat.com>

	* printer/HP-PSC_1300.xml: Corrected IEEE 1284 information (RH
	  bug #174957).

	* printer/HP-OfficeJet_5110.xml: Added IEEE 1284 information (RH
	  bug #176224).

2005-12-09  Till Kamppeter <till.kamppeter@gmx.net>

	* PPD/Brother/*.ppd: Added 35 PPD files released under GPL by
	  Brother.

2005-11-16  George Liu <george.liu@ussj.ricoh.com>

	* Updated all 178 PCL-XL XML files for Ricoh, Savin, Gestetner, NRG,
	Infotec and Lanier, with information on UserCode/LockedPrint usage.

2005-11-15  George Liu <george.liu@ussj.ricoh.com>

	* Updated all 178 PCL-XL PPD files for Ricoh, Savin, Gestetner, NRG,
	Infotec and Lanier. The new PPDs support JobLog features, namely
	Usercode, LockedPrint, SamplePrint and DocServer. 

2005-11-14  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Added HP Color LaserJet 3000 and 3800.

2005-11-11  George Liu <george.liu@ussj.ricoh.com>

	* Renamed Ricoh Aficio Color 2206 to Ricoh Aficio 5206. 
	  Updated opt/6.xml, opt/Postscript-Resolution.xml,