@@ -23,7 +23,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <general>
+      <manufacturer>SHARP</manufacturer>
+      <model>AR-160/200 series</model>
+      <description></description>
+      <commandset>PCL</commandset>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
   <unverified/><!--no "contrib_url"-->
