@@ -1,3 +1,8 @@
+2006-01-11  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Sharp-AR-161.xml: Added IEEE 1284 information (RH
+	  bug #177521).
+
 2006-01-06 Shiyun Yie <hplip@hp.com>
 	* Removed HPIJS/HPLIP references that are not applicable.
 
